# personal-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt  todo.md
database/: database.py
personal-rag/preprocess/: __init__.py
personal-rag/rag/: retriever.py
personal-rag/scripts/: ingest.py
preprocess/: preprocess.py
rag/: __init__.py  retriever.py
src/personal_rag/: cli.py
src/personal_rag/database/: database.py
src/personal_rag/preprocess/: __init__.py  ingest.py  preprocess.py
src/personal_rag/rag/: __init__.py  retriever.py
src/personal_rag/scripts/: ingest.py  preprocess.py
tests/: test_database.py  test_retriever.py
