[project]
name = "personal-rag"
version = "0.1.0"
description = "A simple personal RAG pipeline"
authors = [
    { name="Zofia Milczarek", email="milczarekzofia01@gmail.com" },
]

dependencies = [
    "pandas",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["personal-rag"]